Agregando funcionalidad de multi idioma y programación de la orientación en horizontal y vertical.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Asteroids</string>
+    <string name="app_name">Asteroides</string>
 
     <string name="rInicio">¡Empezar!</string>
     <string name="rConfig">Configuraciones</string>
